--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: amazon_payment_services_apple_pay
 description: Flutter package for Amazon Payment Services native mobile SDKs 
 version: 0.0.5
 homepage: https://github.com/payfort/flutter-amazonpaymentservices
-
+publish_to: Nabeeh Nabeeh Information Technology
 environment:
   sdk: '>=2.18.6 <3.0.0'
   flutter: ">=2.5.0"
