--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,14 @@
+#authors : Nabeeh Nabeeh Information Technology
+
 name: amazon_payment_services_apple_pay
-description: Flutter package for Amazon Payment Services native mobile SDKs 
-version: 0.0.5
+description: Flutter package for Amazon Payment Services native mobile SDKs
+publish_to: none
+
+
 homepage: https://github.com/payfort/flutter-amazonpaymentservices
-publish_to: Nabeeh Nabeeh Information Technology
+version: 0.0.5
+
+
 environment:
   sdk: '>=2.18.6 <3.0.0'
   flutter: ">=2.5.0"
@@ -14,7 +20,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   json_annotation:
   json_serializable:
   build_runner:
